--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </section>
         <section class="price-block padding-site">
             <div class="price-block-head">
-                <h1 class="price-heading heading">Des tarifs qui s'adaptent à votre activité !</h1>
+                <h1 class="price-heading heading">Des tarifs qui s&rsquo;adaptent &agrave;&nbsp;votre activit&eacute; !</h1>
                 <a href="#" class="btn btn-mensuel">
                     <span class="mensuel">Mensuel</span></a>
                 <span class="annuel">Annuel &minus;16,5%</span>
